<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/outletname"
        android:id="@+id/editoutletname"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
                android:layout_margin="10dp"
        android:ems="10"
        android:id="@+id/editfullname"
        android:hint="@string/personname"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone"
        android:layout_margin="10dp"
        android:ems="10"
        android:id="@+id/editphone" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/spinchannel"
        android:layout_gravity="center_horizontal"
        android:entries="@array/channels"/>


     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/saveoutlet"
         android:id="@+id/btnsaveoutlet"
         android:layout_margin="10dp"

         />





</LinearLayout>