<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp">



    <EditText
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"

        android:id="@+id/editusername"
        android:hint="@string/username"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/edtpassword"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
                android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnlogin"
        android:layout_gravity="center_horizontal" />
</LinearLayout>